--- a/src/main/resources/KhuyenMai.fxml
+++ b/src/main/resources/KhuyenMai.fxml
@@ -81,7 +81,7 @@
                         <Button layoutX="573.0" layoutY="151.0" mnemonicParsing="false" onAction="#openInforContainer" prefHeight="25.0" prefWidth="135.0" styleClass="btn" text="Thêm KMTT" />
                         <Pane fx:id="inforContainer" layoutX="-1.0" layoutY="246.0" prefHeight="316.0" prefWidth="983.0">
                      <children>
-                                <VBox fx:id="inforForm" layoutX="184.0" layoutY="82.0" prefHeight="275.0" prefWidth="355.0" spacing="15.0" styleClass="inforForm">
+                                <VBox fx:id="inforForm" layoutX="84.0" prefHeight="275.0" prefWidth="355.0" spacing="15.0" styleClass="inforForm">
                                     <children>
                                         <HBox prefHeight="26.0" prefWidth="322.0" spacing="20.0">
                                             <VBox.margin>
@@ -119,30 +119,30 @@
                      </children>
                         </Pane>
                   <Button layoutX="572.0" layoutY="120.0" mnemonicParsing="false" onAction="#openInforContainerKmTheoSanPham" prefHeight="25.0" prefWidth="135.0" text="Thêm KMSP" />
-                  <AnchorPane fx:id="inforContainerr" layoutX="33.0" layoutY="12.0" prefHeight="237.0" prefWidth="515.0">
+                  <AnchorPane fx:id="inforContainerKMSP" layoutX="33.0" layoutY="12.0" prefHeight="237.0" prefWidth="515.0">
                      <children>
-                        <Pane fx:id="inforFormm" layoutX="32.0" layoutY="19.0" prefHeight="200.0" prefWidth="394.0">
+                        <Pane fx:id="inforFormKMSP" layoutX="32.0" layoutY="19.0" prefHeight="200.0" prefWidth="394.0">
                            <children>
                               <HBox layoutX="28.0" layoutY="14.0" prefHeight="36.0" prefWidth="338.0" spacing="15.0">
                                  <children>
-                                    <TextField fx:id="txt_maChuongTrinhKhuyenMaii" promptText="Mã Chương Trình Khuyến Mãi" />
+                                    <TextField fx:id="txt_CTKMSanPham" promptText="Mã Chương Trình Khuyến Mãi" />
                                     <TextField fx:id="txt_maSanPham" promptText="Mã Sản Phẩm" />
                                  </children>
                               </HBox>
                               <HBox layoutX="28.0" layoutY="50.0" prefHeight="36.0" prefWidth="271.0">
                                  <children>
-                                    <TextField fx:id="txt_phanTramKhuyenMaii" prefHeight="25.0" prefWidth="213.0" promptText="\% Khuyến Mãi" />
+                                    <TextField fx:id="txt_phanTramKhuyenMaiSP" prefHeight="25.0" prefWidth="213.0" promptText="\% Khuyến Mãi" />
                                  </children>
                               </HBox>
                               <HBox layoutX="28.0" layoutY="86.0" prefHeight="36.0" prefWidth="316.0" spacing="15.0">
                                  <children>
-                                    <DatePicker fx:id="datePickerNgayBatDauu" promptText="Ngày Bắt Đầu" />
-                                    <DatePicker fx:id="datePickerNgayKetThucc" promptText="Ngày Kết Thúc" />
+                                    <DatePicker fx:id="datePickerNgayBatDauSP" promptText="Ngày Bắt Đầu" />
+                                    <DatePicker fx:id="datePickerNgayKetThucSP" promptText="Ngày Kết Thúc" />
                                  </children>
                               </HBox>
                               <HBox fx:id="inforFormButtonContainerr" layoutX="106.0" layoutY="132.0" prefHeight="44.0" prefWidth="200.0" spacing="15.0">
                                  <children>
-                                    <Button fx:id="btnAddKMm" mnemonicParsing="false" onAction="#addKmTheoSanPham" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
+                                    <Button fx:id="btnAddKMSP" mnemonicParsing="false" onAction="#addKmTheoSanPham" prefHeight="25.0" prefWidth="79.0" text="Thêm" />
                                     <Button mnemonicParsing="false" onAction="#clossInforContainerKmTheoSanPham" prefHeight="25.0" prefWidth="82.0" text="Đóng" />
                                  </children>
                               </HBox>
